[tool.poetry]
name = "click-prompt"
version = "0.1.0"
description = ""
authors = ["Markus Grotz <grotz@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
questionary = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
