[tool.poetry]
name = "click-prompt"
version = "0.1.0"
description = ""
authors = ["Markus Grotz <grotz@uw.edu>"]

[tool.poetry.dependencies]
python = ">=3.6.9,<4.0"
click = ">=8.0.4"
questionary = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
