[tool.poetry]
name = "click-prompt"
version = "0.6.1"
description = "click-prompt provides more beautiful interactive options for the Python click library"
readme = "README.md"
authors = ["Markus Grotz <grotz@uw.edu>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
homepage = "https://github.com/markusgrotz/click-prompt"
repository = "https://github.com/markusgrotz/click-prompt"
documentation = "https://github.com/markusgrotz/click-prompt"
tracker = "https://github.com/markusgrotz/click-prompt/issues"

[tool.poetry.dependencies]
python = ">=3.6.9,<4.0"
click = ">=8.0.4"
questionary = "^1.10.0"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 88
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
